[package]
name = "etheryal-bootimage"
version = "0.3.0"
authors = ["KernelFreeze <kernelfreeze@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader-locator = "0.0.4"
runner-utils = "0.0.2"
locate-cargo-manifest = "0.2.2"
clap = "3.0.0-beta.2"
log = "0.4.14"
cargo-manifest = "0.2"
thiserror = "1.0"
simple_logger = "1.11.0"
